2002-12-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (do_check_merge_target): Add missing space.

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

	* configure.in: Do not use missing while checking for Autoconf's
	version, otherwise we won't notice that Autoconf isn't installed.
	Augment the error message with a few questions to help users.

2002-11-30  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/gnits2.test, tests/gnits3.test: Move the greps inside the
	Makefile, so we can honor $(EXEEXT).  Otherwise these tests
	fail under Cygwin.
	Reported by Charles Wilson.

	For PR automake/375 (Debian Bug #168671):
	* automake.in (scan_texinfo_file): Erase all known index files, no
	matter whether they are used at the top-level or not, because we
	can never know if they are used in included files.  The remaining
	macros we recognize at the top-level of a Texi document are
	@defindex, @defcodeindex, @synindex, and @syncodeindex.
	* tests/texinfo18.test: New file.
	* tests/Makefile.am (TESTS): Add texinfo18.test.
	Reported by Simon Richter.

	* automake.in (scan_texinfo_file): Honor only the first @setfilename.
	* tests/texinfo17.test: New file.
	* tests/Makefile.am (TESTS): Add texinfo17.test.
	Reported by Karl Berry.

	For PR automake/357:
	* automake.in (require_file_internal): Don't complain a file is "not
	found" when it is a target.  Make sure "not found" files are otherwise
	reported as error (they were reported as 'note').
	* tests/distcommon3.test: Augment to test the above.
	* tests/libobj12b.test: Touch ltmain.sh.
	* tests/required2.test: Make sure Automake fails because ltmain.sh
	has been removed.
	Reported by Ronald Landheer.

	* tests/texinfo3.test: Make sure we don't output single suffix
	inference rules when building `.info'-less Info files (this
	confuses Solaris make).  Run distcheck to make sure the rules
	work.
	* automake.in (output_texinfo_build_rules): Define GENERIC_INFO
	and SOURCE_INFO.