@@ -5672,9 +5672,7 @@ sub lang_c_finish
     {
 	if ($file =~ /^(.*)\.[cly]$/ && -f "$relative_dir/$file")
 	{
-	    $de_ansi_files{$1} = (($relative_dir eq '.' || $relative_dir eq '')
-				  ? ''
-				  : "$relative_dir/");
+	    $de_ansi_files{$1} = ''
 	}
     }
 
