@@ -1,0 +1,74 @@
+#! /bin/sh
+# Copyright (C) 2002  Free Software Foundation, Inc.
+#
+# This file is part of GNU Automake.
+#
+# GNU Automake is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# GNU Automake is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with autoconf; see the file COPYING.  If not, write to
+# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+
+# Make sure ansi2knr works with $(LIBOBJS).
+
+required=gcc
+. ./defs || exit 1
+
+set -e
+
+cat >> configure.in << 'END'
+AC_PROG_CC
+AM_C_PROTOTYPES
+AC_PROG_RANLIB
+AC_LIBOBJ([hello])
+AC_CONFIG_FILES([dir/Makefile])
+AC_OUTPUT
+END
+
+cat > Makefile.am << 'END'
+SUBDIRS = dir
+END
+
+mkdir dir
+
+cat > dir/Makefile.am << 'END'
+AUTOMAKE_OPTIONS = ansi2knr
+noinst_LIBRARIES = liblib.a
+liblib_a_SOURCES =
+liblib_a_LIBADD = $(LIBOBJS)
+END
+
+cat > dir/hello.c << 'END'
+#include <stdio.h>
+
+int
+main (int argc, char **argv)
+{
+   printf ("hello\n");
+}
+END
+
+$ACLOCAL
+$AUTOCONF
+$AUTOMAKE -a
+
+./configure am_cv_prog_cc_stdc=no
+$MAKE
+test -f dir/hello_.c
+$MAKE distclean
+test ! -f dir/hello_.c
+
+# Also run without forcing ansi2knr, so we make sure the
+# rules work with ANSI compilers.
+./configure
+$MAKE
+test ! -f dir/hello_.c
