@@ -1,5 +1,11 @@
 2002-12-01  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (lang_c_finish): Do not fill de_ansi_files
+	with subdirectory informations for %libsources files.
+	This revers part of a change from 2002-01-13.
+	* tests/ansi10.test: New file.
+	* tests/Makefile.am (TESTS): Add ansi10.test.
+
 	* automake.in (do_check_merge_target): Add missing space.
 
 	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
